# Argon40Conversion

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  Makefile  conf.py  conf.py.in  index.rst  make.bat
include/: Ar40Detector.hh  Ar40Geometry.hh  Ar40Hit.hh  Ar40NeutronGenerator.hh
src/: Ar40Detector.cc  Ar40Geometry.cc  Ar40Hit.cc  Ar40NeutronGenerator.cc
